--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="hr-line"></div>
             <div class="hr-line2"></div>
             <div class="vl-line"></div>
-            <img src="images/qrcode.png" class="qr-logo" widht="150px" height="150px" alt="Scan this to visit Tyree Black's portfolio">
+            <img src="images/Qr-Code.png" class="qr-logo" widht="150px" height="150px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
            
         <!--Footer Layout-->
