--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 color: black;
                 position: relative;
                 top: -230px;
-                left: -435px;
+                left: -270px;
             }
 
             .candidate-ID {
@@ -354,7 +354,7 @@
                 height: 80px;
                 position: relative;
                 top: -680px;
-                right: -589px;
+                right: -495px;
                 box-shadow: 0 0 4px black, 0 0 2px black;
 
             }
@@ -411,8 +411,8 @@
             .qr-logo {
                 background-color: transparent;
                 position: relative;
-                right: -1200px;
-                bottom: -200px;
+                right: -940px;
+                bottom: -370px;
 
             }
 
@@ -420,7 +420,7 @@
                 font-family: 'Arial', sans-serif;
                 font-size: 35px;
                 color: gray;
-                padding-bottom: 20px;
+                padding-bottom: 40px;
                 position: relative;
                 left: -600px;
                 bottom: -100px;
@@ -489,7 +489,7 @@
             <h4>FEATURED WORK</h4>
             <div class="hr"></div>
             <h2 class="second-header"></h2>
-          <img src="Project.png" class="project" width="500px" height="500px">
+          <img src="images/Project.png" class="project" width="500px" height="500px">
           <ul>
             <li>Collaborated on a research project as part of the SURI internship to enhance IoT data security.</li><br>
             <li>Developed encryption algorithms using Python to simulate secure data transmissions.</li><br>
@@ -501,7 +501,7 @@
         <div class="third-layout">
             <h2 class="third-header">CERTIFICATES</h2>
             <div class="container-2">
-            <img src="CompTIA Security+.png" class="security" width="120px" height="120px">
+            <img src="images/CompTIA Security+.png" class="security" width="120px" height="120px">
             <i class="fa-solid fa-shield"></i>
             <p class="certificate">CompTIA Security+</p>
             <p class="candidate">Candidate ID:COMP001022556475</p>
@@ -511,7 +511,7 @@
             </a>
             </div> 
             <div class="container-3">
-            <img src="CySA+ce certified logo.jpg" class="cybersecurity" width="200px" height="200px">
+            <img src="images/CySA+ce certified logo.jpg" class="cybersecurity" width="200px" height="200px">
             <i class="fa-solid fa-shield"></i>
             <p class="certificate-2">CompTIA CySA+</p>
             <p class="candidate-ID">Candidate ID:COMP001022556475</p>
@@ -526,7 +526,7 @@
             <div class="hr-line"></div>
             <div class="hr-line2"></div>
             <div class="vl-line"></div>
-            <img src="images/Qr-Code.png" class="qr-logo" widht="150px" height="150px" alt="Scan this to visit Tyree Black's portfolio">
+            <img src="images/Qr-Code.png" class="qr-logo" widht="120px" height="120px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
            
         <!--Footer Layout-->
