--- a/Education.html
+++ b/Education.html
@@ -11,7 +11,6 @@
             body {
                 background-color: rgb(226, 215, 202);
                 margin: 0;
-                padding: 0;
                 overflow-x: hidden;
             }
 
@@ -58,6 +57,15 @@
             }
 
             h6 {
+                font-family: 'Roboto', sans-serif;
+                font-size: 19px;
+                font-weight: normal;
+                position: relative;
+                top: -250px;
+                right: -600px;
+            }
+
+            .programming {
                 font-family: 'Roboto', sans-serif;
                 font-size: 19px;
                 font-weight: normal;
@@ -246,6 +254,14 @@
                 right: -600px;
             }
 
+            .programming-skills {
+                font-size: 28px;
+                font-weight: bold;
+                position: relative;
+                top: -250px;
+                right: -600px;
+            }
+
             .soft-skills {
                 font-size: 28px;
                 font-weight: bold;
@@ -320,6 +336,97 @@
                 top: -310px;
                 right: -600px;
             }
+
+            .progress-bar-six {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 65%, rgb(228, 228, 228) 35%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -310px;
+                right: -600px;
+            }
+
+            .progress-bar-eight {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 85%, rgb(228, 228, 228) 15%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
+            .progress-bar-nine {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 60%, rgb(228, 228, 228) 40%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
+            .progress-bar-ten {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 60%, rgb(228, 228, 228) 40%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
+            .progress-bar-twelve {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 90%, rgb(228, 228, 228) 10%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
+            .progress-bar-thirteen {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background-color: red;
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
+            .progress-bar-fourteen {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 90%, rgb(228, 228, 228) 10%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
             
             #footer {
                 font-size: 35px;
@@ -367,6 +474,7 @@
                 <p class="College-Park">University of Maryland</p>
                 <p class="masters-degree">M.S. Cyber Security Engineering.</p>
                 <p class="location-2">College Park, MD</p>
+                <img src="images/UMD.png" class="UMD-logo">
 
                 <!--Bachelor Degree Timeline-->
                 <h1 class="header-1">From 08/2021 | To 05/2025</h1>
@@ -401,12 +509,34 @@
                 <h5>Malware Analysis</h5>
                 <div class="progress-bar-five"></div>
 
+                <h5>Knowledge of Risk Management</h5>
+                <div class="progress-bar-six"></div>
+
+            <!--Programming Skills Layout Section -->
+                <h1 class="programming-skills">Programming</h1>
+                <h6 class="programming">HTML & CSS</h6>
+                <div class="progress-bar-eight"></div>
+
+                <h6 class="programming">C++</h6>
+                <div class="progress-bar-nine"></div>
+
+                <h6 class="programming">Python</h6>
+                <div class="progress-bar-ten"></div>
+
+
                 <!--Soft Skills Layout Section-->
                 <h1 class="soft-skills">Soft Skills</h1>
                 <h6>Attention To Detail</h6>
+
+
                 <h6>Customer Service</h6>
+                <div class="progress-bar-twelve"></div>
+
                 <h6>Teamwork Collaboration</h6>
+                <div class="progress-bar-thirteen"></div>
+
                 <h6>Problem Solving</h6>
+                <div class="progress-bar-fourteen"></div>
             </div>
 
             <footer id="footer">
