--- a/Education.html
+++ b/Education.html
@@ -14,6 +14,12 @@
                 overflow-x: hidden;
             }
 
+            .UMD-logo {
+                position: relative;
+                top: -565px;
+                right: -973px;
+            }
+
             h2 {
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
                 text-align: center;
@@ -82,6 +88,7 @@
             .header-2 {
                 position: relative;
                 top: -360px;
+                right: -1060px;
             }
 
             p {
@@ -474,7 +481,7 @@
                 <p class="College-Park">University of Maryland</p>
                 <p class="masters-degree">M.S. Cyber Security Engineering.</p>
                 <p class="location-2">College Park, MD</p>
-                <img src="images/UMD.png" class="UMD-logo">
+                <img src="images/UMD.png" class="UMD-logo" width="80px" height="80px;">
 
                 <!--Bachelor Degree Timeline-->
                 <h1 class="header-1">From 08/2021 | To 05/2025</h1>
