--- a/Experience.html
+++ b/Experience.html
@@ -199,7 +199,7 @@
                         <li>Collaborated with faculty mentors to refine research methodology and prepare detailed reports and presentations.</li><br>
                         <li>Simulated IoT data protection scenarios using Python to visualize the impact of encryption techniques.</li>
                     </ul>
-                    <img src="main.png" class="bsu-logo" width="80px" height="80px">
+                    <img src="images/main.png" class="bsu-logo" width="80px" height="80px">
                 </div>
 
                 <div class="card-2">
@@ -212,7 +212,7 @@
                         <li>Performed system installations, configurations, and backups to ensure data integrity.</li><br>
                         <li>Provided technical support for Windows and macOS operating systems.</li>
                     </ul>
-                    <img src="roberthalf.png" class="roberthalf-logo" width="80px" height="80px">
+                    <img src="images/roberthalf.png" class="roberthalf-logo" width="80px" height="80px">
                 </div>
             </div>
 
