--- a/Projects.html
+++ b/Projects.html
@@ -68,9 +68,9 @@
             }
 
             .topnav {
-                background-color: black;
+                background-color: rgb(255, 255, 255);
                 box-shadow: 0 0 4px rgb(178, 176, 176), 0 0 4px rgb(175, 174, 174);
-                line-height: 60px;
+                line-height: 40px;
                 overflow: hidden;
                 position: sticky;
                 z-index: 2000;
@@ -79,8 +79,8 @@
 
             .topnav a {
                 font-family:'Times New Roman', Times, serif;
-                font-size: 25px;
-                color: white;
+                font-size: 23px;
+                color: black;
                 float: right;
                 padding: 17px 17px;
                 text-decoration: none
@@ -89,12 +89,13 @@
             .topnav a.active {
                 font-family: 'Roboto', sans-serif;
                 font-size: 32px;
-                color: white;
+                color: black;
                 float: left;
 
             }
             
             .topnav a:hover {
+                color: rgb(15, 15, 181);
                 text-decoration: underline;
             }
 
@@ -206,8 +207,9 @@
 
             <div class="topnav">
             <a href="Contact_Tyree_Black.html">Contact</a>
-            <a href="Education.html">Education</a>
+            <a href="Projects.html">Projects</a>
             <a href="Resume.html">Resume</a>
+            <a href="Education.html">Education</a>
             <a href="Experience.html">Experience</a>
             <a class="active" href="Tyree.html">Tyree Black</a>
             </div>
@@ -227,7 +229,7 @@
                 <hr class="hr-line" width="20%" size="2px">
                 <hr class="line-2" width="20%" size="3px">
                 <div class="card">
-                <img src="C++.jpg" class="c" width="380px" height="170px">
+                <img src="images/C++.jpg" class="c" width="380px" height="170px">
                     <h2>C++ Projects</h2>
                     <p></p>
                     <a href="https://github.com/TyreeBlack/C-Projects" target="_blank">
@@ -236,7 +238,7 @@
                 </div>
 
                 <div class="card-2">
-                    <img src="python.jpg" class="python" width="380px" height="170px">
+                    <img src="images/python.jpg" class="python" width="380px" height="170px">
                     <h2>Python Projects</h2>
                     <p></p>
                     <a href="" target="_blank">
