--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 height: 80px;
                 position: relative;
                 top: -680px;
-                right: -495px;
+                right: -515px;
                 box-shadow: 0 0 4px black, 0 0 2px black;
 
             }
@@ -475,7 +475,7 @@
         <div class="first-layout">
             <div class="vl"></div>
             <h3>SUMMARY</h3>
-            <p class="paragraph">I am a motivated and detail-oriented entry-level IT support with a CompTIA Security+ certification and CompTIA CySA+ certification, alongw extensive hands-on experience in managing and resolving technical challenges across diverse platforms. With a proven ability to troubleshoot complex systems and deliver innovative solutions, I excel in ensuring system reliability and user satisfaction. A strong communicator and collaborative team player, I consistently demonstrate a commitment to delivering exceptional customer service while maintaining high technical standards. My passion for cybersecurity and IT infrastructure drives me to continuously expand my knowledge and expertise. I am eager to leverage my technical skills, academic foundation, and proactive problem-solving abilities to contribute to a dynamic IT environment and support organizational success.</p>
+            <p class="paragraph">I am a motivated and detail-oriented entry-level IT support with a CompTIA Security+ certification and CompTIA CySA+ certification, along withe xtensive hands-on experience in managing and resolving technical challenges across diverse platforms. With a proven ability to troubleshoot complex systems and deliver innovative solutions, I excel in ensuring system reliability and user satisfaction. A strong communicator and collaborative team player, I consistently demonstrate a commitment to delivering exceptional customer service while maintaining high technical standards. My passion for cybersecurity and IT infrastructure drives me to continuously expand my knowledge and expertise. I am eager to leverage my technical skills, academic foundation, and proactive problem-solving abilities to contribute to a dynamic IT environment and support organizational success.</p>
         </div>
 
         <div class="flex-box">
