--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 color: gray;
                 position: relative;
                 top: -190px;
-                right: -340px;
+                right: -90px;
             }
 
             .fa-solid.fa-shield {
@@ -214,7 +214,7 @@
                 font-family: 'Times New Roman', Times, serif;
                 font-weight: normal;
                 top: -190px;
-                left: -360px;
+                left: -115px;
             }
 
             .candidate {
@@ -228,14 +228,14 @@
                 color: black;
                 position: relative;
                 top: -280px;
-                left: -410px;
+                left: -210px;
             }
 
             .certificate-term-1 {
                 color: black;
                 position: relative;
                 top: -240px;
-                left: -290px;
+                left: -50px;
             }
 
             .vl {
@@ -354,7 +354,7 @@
                 height: 80px;
                 position: relative;
                 top: -680px;
-                right: -515px;
+                right: -495px;
                 box-shadow: 0 0 4px black, 0 0 2px black;
 
             }
@@ -505,7 +505,7 @@
             <i class="fa-solid fa-shield"></i>
             <p class="certificate">CompTIA Security+</p>
             <p class="candidate">Candidate ID:COMP001022556475</p>
-            <p class="certificate-term">June 2027</p>
+            <p class="certificate-term">Exp.Date: June 2027</p>
             <a href="CompTIA Security+ ce certificate.pdf" download>
             <i class="fa-solid fa-file-arrow-down"></i>
             </a>
@@ -515,7 +515,7 @@
             <i class="fa-solid fa-shield"></i>
             <p class="certificate-2">CompTIA CySA+</p>
             <p class="candidate-ID">Candidate ID:COMP001022556475</p>
-            <p class="certificate-term-1">Februrary 2028</p>
+            <p class="certificate-term-1">Exp.Date: Februrary 2028</p>
             <i class="fa-solid fa-file-arrow-down"></i>
             </div>
         </div>
