--- a/Projects.html
+++ b/Projects.html
@@ -211,7 +211,7 @@
             <a href="Resume.html">Resume</a>
             <a href="Education.html">Education</a>
             <a href="Experience.html">Experience</a>
-            <a class="active" href="Tyree.html">Tyree Black</a>
+            <a class="active" href="index.html">Tyree Black</a>
             </div>
 
             <div class="chat-container">
