--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-        <title>Tyree Black</title>
+        <title>Tyree Black | Home Page</title>
 
         <style>
             body {
@@ -136,6 +136,12 @@
                 top: -100px;
             }
 
+            .journey {
+                font-size: 16px;
+                position: relative;
+                top: -150px;
+            }
+
             .second-header {
                 color: rgb(15, 15, 106);
                 font-family:'Times New Roman', Times, serif;
@@ -163,6 +169,12 @@
                 top: -220px;
                 left: -100px;
                 text-align: center;
+            }
+
+            .fifth-header {
+                position: relative;
+                top: -810px;
+                right: -460px;
             }
 
             p {
@@ -209,7 +221,7 @@
             .project-features {
                 font-size: 25px;
                 position: relative;
-                left: -410px;
+                left: -450px;
                 top: -60px;
             }
 
@@ -222,14 +234,14 @@
             .project {
                 position: relative;
                 top: -55px;
-                left: -700px;
+                left: -730px;
                 box-shadow: 0 0 4px black, 0 0 4px black;
             }
 
             .project-2 {
                 position: relative;
-                top: -770px;
-                right: -870px;
+                top: -820px;
+                right: -850px;
                 box-shadow: 0 0 4px black, 0 0 4px black;
 
             }
@@ -239,14 +251,14 @@
                 font-size: 27px;
                 font-weight: normal;
                 position: relative;
-                top: -800px;
-                right: -380px;
+                top: -820px;
+                right: -360px;
             }
 
             .pepsico {
                 position: relative;
                 top: -820px;
-                right: -800px;
+                right: -790px;
             }
 
             .certificate {
@@ -309,8 +321,8 @@
                 width: 400px;
                 position: absolute;
                 right: 35%;
-                left: 42%;
-                top: 172%;
+                left: 40%;
+                top: 165%;
             }
 
             .hr-line {
@@ -351,7 +363,7 @@
                 background-color: white;
                 overflow: hidden;
                 box-shadow: 0 0 4px darkgray, 0 0 8px darkgray;
-                line-height: 60px;
+                line-height: 40px;
                 top: 0;
                 z-index: 2000;
                 position: sticky;
@@ -372,7 +384,7 @@
 
             .topnav a.active {
                 background-color: white;
-                font-family: 'Arial', sans-serif;
+                font-family: 'Times New Roman', Times, serif;
                 font-size: 35px;
                 font-weight: normal;
                 color: black;
@@ -429,7 +441,7 @@
             .second-layout {
                 background-color: rgb(240, 240, 240);
                 width: 1400px;
-                padding: 210px;
+                padding: 170px;
             }
 
             .third-layout {
@@ -464,8 +476,9 @@
 
             .container-4 {
                 background-color: white;
-                width: 400px;
+                width: 500px;
                 padding: 90px;
+                word-wrap: break-word;
                 position: relative;
                 box-shadow: 0 0 4px gray, 0 0 4px gray;
                 top: -200px;
@@ -479,6 +492,16 @@
                 box-shadow: 0 0 4px gray, 0 0 4px gray;
                 top: -200px;
                 right: -250px;
+            }
+
+            .container-6 {
+                background-color: white;
+                box-shadow: 0 0 4px gray, 0 0 4px gray;
+                width: 500px;
+                padding: 90px;
+                position: relative;
+                top: -847px;
+                right: -700px;
             }
             .fourth-layout {
                 background-color: rgb(204, 202, 202);
@@ -575,12 +598,14 @@
             <li>Presented findings and methodologies to a public audience, receiving recognition for detailed research.</li><br>
           </ul>
 
+          <h2 class="fifth-header">Packet Tracer Implementation for Pepsico Network Security</h2>
           <img src="images/PepsiCo-Topology.png" class="project-2" width="500px" height="500px">
           <ul>
             <h5 class="more-project-2">Responsibilites assiocated with this project:</h5>
-            <li class="pepsico"></li>
-            <li class="pepsico"></li>
-            <li class="pepsico"></li>
+            <li class="pepsico">Established a star topology with a centralized hub and multiple regional offices.</li><br>
+            <li class="pepsico">Integrated MPLS cloud services to enable secure WAN connectivity.</li><br>
+            <li class="pepsico">Ensured the network supports thousands of users and devices (PCs, VoIP phones, wireless endpoints).</li><br>
+            <li class="pepsico">Deployed firewalls (5506-X, 5505) at different MPLS cloud points for traffic filtering.</li><br>
           </ul>
         </div>
 
@@ -615,10 +640,13 @@
             <div class="vl-line"></div>
             <div class="container-4">
             <h5>My Journey</h5>
-            <p class="journey"></p>
+            <p class="journey">I would say my journey has been a mix of ups and downs, each experience I've been through always seems like a teaching lesson. After high school, I went straight into a community college and eventually transferred over to Bowie State University, where Im now majoring in computer technology while also in my last year but life threw me a curveball when I was laid off from my job. It was tough to deal with and I wasn't sure how I was going to manage that feeling of losing something that was so important to me. But eventually I started to find my footing when I got a role with Robert Half and eventually a fellowship at my university, I was also chasing after the Security+ where I took about 4 months to prepare.Eventually I also went after the CySA+ because I realize that cybersecurity was something I was passionate about it and really wanted to do.</p>
             </div>
             <div class="container-5">
             <h5 class="challenges">Challenges</h5>
+            </div>
+            <div class="container-6">
+                <h5 class="hobbies">Hobbies</h5>
             </div>
             <img src="images/Qr-Code.png" class="qr-logo" widht="120px" height="120px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
