--- a/Experience.html
+++ b/Experience.html
@@ -35,14 +35,20 @@
 
             .bsu-logo {
                 position: relative;
-                right: -570px;
-                top: -10px;
+                right: -587px;
+                bottom: -32px;
             }
 
             .roberthalf-logo {
                 position: relative;
+                right: -586px;
+                bottom: -55px;
+            }
+            
+            .census-bureau {
+                position: relative;
                 right: -580px;
-                top: 50px;
+                bottom: -27px;
             }
 
             .bold {
@@ -125,6 +131,7 @@
             }
 
             .topnav a:hover {
+                color: rgb(15, 15, 181);
                 cursor: pointer;
                 text-decoration: underline;
             }
@@ -186,6 +193,16 @@
             <a href="Experience.html">Experience</a>
             </div>
 
+            <div class="chatbot-container">
+            <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+            <df-messenger
+                chat-icon="https:&#x2F;&#x2F;i.imgur.com&#x2F;ClAWzIO.png"
+                chat-title="AskTyree&#x27;sAssistant"
+                agent-id="56971a31-89ff-4b59-a7ed-ec854c6b4208"
+                language-code="en"
+            ></df-messenger>
+            </div>
+
             <div class="first-layout">
                 <h1><span class="bold">Tyree Black</span>/Entry-Level IT Support</h1>
                 <h2>Experience:</h2>
@@ -226,9 +243,9 @@
                     <li>Provided training and support to end-users on Active Directory, application troubleshooting, and basic security protocols.</li><br>
                     <li>Monitored system performance and documented potential security threats for escalation using Splunk and Nessus.</li><br>
                 </ul>
+                <img src="images/Census Bureau.png" class="census-bureau" width="80px" height="80px">
             </div>
             </div>
 
             </body>
             </html>
-
