--- a/Contact_Tyree_Black.html
+++ b/Contact_Tyree_Black.html
@@ -208,7 +208,7 @@
             <a href="Resume.html">Resume</a>
             <a href="Projects.html">Projects</a>
             <a href="Education.html">Education</a>
-            <a href="Experiences.html">Experience</a>
+            <a href="Experience.html">Experience</a>
             </div>
 
             <div class="card">
@@ -268,8 +268,6 @@
                     <i class="fa-brands fa-github"></i>
                  </a>
             </div>
-
-
 
         </body>
         </html>
