--- a/Projects.html
+++ b/Projects.html
@@ -190,6 +190,7 @@
                 outline-width: 3px;
                 outline-style: solid;
                 outline-color: rgb(147, 142, 142);
+                cursor: pointer;
             }
 
             #footer {
