--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             }
 
             h5 {
+                font-family: 'Roboto', sans-serif;
                 font-size: 30px;
                 text-align: center;
                 position: relative;
@@ -138,6 +139,12 @@
 
             .journey {
                 font-size: 16px;
+                position: relative;
+                top: -150px;
+            }
+
+            .challenge {
+                font-size: 17px;
                 position: relative;
                 top: -150px;
             }
@@ -519,8 +526,8 @@
 
             #footer {
                 font-family: 'Arial', sans-serif;
-                font-size: 35px;
-                color: gray;
+                font-size: 34px;
+                color: blue;
                 padding-bottom: 40px;
                 position: relative;
                 left: -600px;
@@ -562,6 +569,8 @@
             </p>
             </div>
 
+
+        <!--AI Chatbot Implementation-->
         <div class="chat-container">
         <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
            <df-messenger
@@ -586,6 +595,8 @@
         <i class="fa-brands fa-github"></i></a>
         </div>
 
+
+        <!--Featured Work Section Layout-->
         <div class="second-layout">
             <h4>FEATURED WORK</h4>
             <div class="hr"></div>
@@ -618,7 +629,7 @@
             <p class="certificate">CompTIA Security+</p>
             <p class="candidate">Candidate ID:COMP001022556475</p>
             <p class="certificate-term">Exp.Date: June 2027</p>
-            <a href="CompTIA Security+ ce certificate.pdf" download>
+            <a href="documents/CompTIA Security+ ce certificate.pdf" download>
             <i class="fa-solid fa-file-arrow-down upload-icon"></i>
             </a>
             </div> 
@@ -628,7 +639,9 @@
             <p class="certificate-2">CompTIA CySA+</p>
             <p class="candidate-ID">Candidate ID:COMP001022556475</p>
             <p class="certificate-term-1">Exp.Date: Februrary 2028</p>
+            <a href="documents/CompTIA CySA+ ce certificate.pdf" download>
             <i class="fa-solid fa-file-arrow-down download-icon"></i>
+            </a>
             </div>
         </div>
 
@@ -644,10 +657,14 @@
             </div>
             <div class="container-5">
             <h5 class="challenges">Challenges</h5>
+            <p class="challenge">Breaking into IT and cybersecurity comes with its own set of obstacles. The field moves fast, requiring constant learning just to keep up. Balancing college, certifications, and hands-on practice has tested my patience and endurance. There were times when self-doubt crept in, and the workload felt overwhelming, but I kept pushing forward. Through every challenge, I’ve gained resilience, adaptability, and a stronger problem-solving mindset. </p>
             </div>
             <div class="container-6">
                 <h5 class="hobbies">Hobbies</h5>
+                <p class="hobbie"></p>
             </div>
+        
+          <!--QR Code Implementation-->
             <img src="images/Qr-Code.png" class="qr-logo" widht="120px" height="120px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
            
